feat(WAFR-217):  add Organization endpoint
