# swagger.yaml
@@ -26,6 +26,38 @@ tags:
   - name: Questions
     description: WAFR Questions
 paths:
+  /organization:
+    get:
+      operationId: getOrganization
+      tags:
+        - Organizations
+      summary: Retrieve details of organization of the user
+      description: |
+        Retrieves relevant details about the organization of the connected user that will be included in the dashboard.
+      responses:
+        '200':
+          description: Details of Organization retrieved successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - totalAssessments
+                  - opportunitiesPerMonth
+                properties:
+                  totalAssessments:
+                    type: integer
+                    description: Total number of assessments associated with the organization
+                  opportunitiesPerMonth:
+                    type: object
+                    additionalProperties:
+                      type: integer
+                    description: |
+                      A map where each key is a month and the value is the number of ACE opportunities in that month.
+        '400':
+          description: A issue occurred while trying to retrieve the organization of the user
+        '500':
+          description: Internal server error.
   /assessments:
     get:
       operationId: getAssessments
